--- a/inner.html
+++ b/inner.html
@@ -172,6 +172,7 @@
 		<!-- User JS -->
 		<script src="js/Database.js"></script>
 		<script src="js/Location.js"></script>
-		<script src="js/main.js"></script>
+		<script src="js/Card.js"></script>
+		<script src="js/index.js"></script>
 	</body>
 </html>
